# VirtuaCam

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build-all.ps1  clean-output.ps1  conflicts.txt  driver-files.txt  install-all.ps1  next task.txt  review.md  software-files.txt  todo.md  webcam.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
driver-project/: README.md  avshws.h  build-driver.ps1  capture.cpp  capture.h  device.cpp  device.h  filter.cpp  filter.h  hwsim.cpp  hwsim.h  image.cpp  image.h  task2.txt
driver-project/.codesight/: CODESIGHT.md  libs.md
driver-project/Driver/avshws/: avshws.h  avshws.inf  avshws.vcxproj  capture.cpp  capture.h  customprops.h  device.cpp  device.h  filter.cpp  filter.h  hwsim.cpp  hwsim.h  install-driver.ps1  install0.bat
driver-project/UserLand/DriverInterface/: Device.cpp  DriverInterface.vcxproj
implementation/: VirtuaCam-Coupling-Workflow.md  WDK_Driver_Development_Report.md  bsod-fix-plan.md  continuation-prompt.md  done.txt  driver-frame-path-update-1.md  driver-frame-path-update-2.md  driver-frame-path.md  hyperv-clean-hlk-plan.md  merge-repos-agent-prompt-v2.md  performance-check-prompt.md  plan.md  plan22.md  plan22_execution_log.md  scheduled.md  skill.md.txt  virtuacam-audit.md  virtuacam_wdk_audit_workflow.md
implementation/phases/: phase0-plan.md  phase1-plan.md  phase2-plan.md  phase3-plan.md  phase4-plan.md  phase5-plan.md  phase6+schedule.md  phase6-plan.md  phase6.2-plan.md  phase6.4-plan.md
scripts/: build-all.ps1  clean-output.ps1  guest-held-webcam-session.ps1  host-media-capture-auto-proof.ps1  host-preview-menu-proof.ps1  host-webcam-html-proof.ps1  host-windows-camera-proof.ps1  hyperv-clean-checkpoint.ps1  hyperv-clean-validate.ps1  hyperv-collect.ps1  hyperv-common.ps1  hyperv-driver-loop.ps1  hyperv-enable-ssh.ps1  hyperv-hlk-client.ps1  hyperv-hlk-controller-vm.ps1  hyperv-hlk-preflight.ps1  hyperv-hold-webcam-session.ps1  hyperv-kd.ps1  hyperv-proof-chrome.ps1  hyperv-proof-windows-camera.ps1  hyperv-three-capture-proof.ps1  install-all.ps1  install-watcher-service.ps1  playwright-vm-webcam-proof.ps1  serve-webcam.ps1  show-proof-panel.ps1  uninstall-watcher-service.ps1
software-project/: .clangd  .gitignore  README.md  build.ps1  register-dll.bat  task.txt  unregister-dll.bat  webcam.html
software-project/src/: CMakeLists.txt  vcpkg.json
software-project/src/VirtuaCam/: App.cpp  App.h  Broker.cpp  BrokerClient.cpp  BrokerClient.h  Config.cpp  Config.h  Consumer.cpp  DirectPortClientStub.cpp  Discovery.cpp  Discovery.h  DriverBridge.cpp  DriverBridge.h  Enumerator.cpp  Enumerator.h  Formats.cpp  Formats.h  Guids.cpp  Guids.h  MFCamera.cpp  MFCamera.h  Menu.cpp  Menu.h  Multiplexer.cpp  Multiplexer.h  Process.cpp  Process.h  Process.rc  Resource.h  RuntimeLog.cpp  RuntimeLog.h  ShaderModule.cpp  ShaderModule.h  Tools.cpp  Tools.h  UI.cpp  UI.h  WASAPI.cpp  WASAPI.h  pch.h  (+1 more)
software-project/src/VirtuaCamLegacy/: MFActivate.cpp  MFActivate.h  MFClient.cpp  MFClient.h  MFGraphicsCapture.cpp  MFSource.cpp  MFSource.h  MFStream.cpp  MFStream.h  pch_legacy.cpp  pch_legacy.h
tools/: artifact-manifest.ps1
tools/dshow-probe/: dshow_probe.cpp
